<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="fill_parent"
    android:orientation="vertical">
        
    <EditText
        android:id="@+id/source_edit"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:scrollHorizontally="true"
        android:autoText="false"
        android:capitalize="none"
        android:text="@string/currentLocation"
        android:hint="@string/startPoint"
        android:textAppearance="?android:attr/textAppearanceMedium" />
            
    <EditText
        android:id="@+id/destination_edit"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:scrollHorizontally="true"
        android:autoText="true"
        android:capitalize="none"
        android:hint="@string/endPoint"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Button 
        android:id="@+id/goButton"    		
   			android:layout_height="match_parent"
   			android:layout_width="100dp"
        android:text="@string/go"
        android:layout_gravity="center">        
    </Button>
    
</LinearLayout>
